# marble

./: .clangd  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  debug.plist  docker-compose.yml  start.sh  vcpkg.json
chisel/: CMakeLists.txt  README.md
chisel/include/engine/: account.h  engine.h  execution_model.h
chisel/include/grpc/: backtest_service.h
chisel/include/strategy/: i_strategy.h  ma_crossover.h
chisel/src/: main.cpp  server_main.cpp
chisel/src/engine/: CMakeLists.txt  account.cpp  engine.cpp  execution_model.cpp
chisel/src/grpc/: CMakeLists.txt  backtest_service.cpp
chisel/src/strategy/: CMakeLists.txt  i_strategy.cpp  ma_crossover.cpp
chisel/src/tests/: CMakeLists.txt
config/nginx/: nginx.conf
config/nginx/ssl/: server.crt  server.key
gallery/: .gitignore  README.md  envoy.yaml  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
gallery/public/: index.html
gallery/src/: App.tsx  index.css
gallery/src/components/: AggregatesPanel.tsx
gallery/src/components/CandlestickChart/: CandlestickChart.tsx  chartConfig.ts  theme.ts  types.ts  utils.ts
gallery/src/components/LandingPage/: LandingPage.css  LandingPage.tsx
gallery/src/components/WaveAnimation/: WaveAnimation.css  WaveAnimation.tsx
gallery/src/proto/: AggregatesServiceClientPb.ts  aggregates_pb.d.ts  aggregates_pb.js
proto/: CMakeLists.txt  aggregates.proto  back_test.proto
quarry/: .env.example  CMakeLists.txt
quarry/config/sql/: V01__agg.sql  V02__agg_normalize.sql
quarry/include/: file_manager.h  generator.h  logging.h  migration.h  migration_runner.h  utils.h
quarry/include/api/: dns_cache.h  http_client.h  http_request_builder.h  http_types.h  massive.h  polygon.h  retry_policy.h  ssl_context_provider.h  stream_guard.h  transport.h  transport_pool.h
quarry/include/api/endpoints/: aggregates.h  aggregates_daily.h  base_endpoint.h
quarry/include/db/: migration.h  sql.h
quarry/include/migration/: migration.h  migration_runner.h
quarry/src/: CMakeLists.txt  bootstrap.cpp  grpc_server.cpp  main.cpp
quarry/src/api/: CMakeLists.txt  dns_cache.cpp  httpClient.cpp  http_client.cpp  http_request_builder.cpp  massive.cpp  polygon.cpp  retry_policy.cpp  ssl_context_provider.cpp  stream_guard.cpp  transport.cpp  transport_pool.cpp
quarry/src/db/: CMakeLists.txt  migration.cpp  sql.cpp
quarry/src/migration/: migration.cpp  migration_runner.cpp
quarry/tests/: CMakeLists.txt  test_bootstrap.cpp  test_dns_cache.cpp  test_endpoints.cpp  test_http_client.cpp  test_massive.cpp  test_polygon.cpp  test_retry_policy.cpp  test_stream_guard.cpp  test_transport_pool.cpp
scripts/: drop_staging.sh
